Changed italian-tile-emporium-website/index.html Changed italian-tile-emporium-website/package-lock.json

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToscanaTiles - Premium Italian Tiles</title>
+    <title>Bengy Home Decor</title>
     <meta name="description" content="Discover premium Italian tiles for your home renovation projects. Authentic materials, expert craftsmanship, and elegant designs." />
     <meta name="author" content="ToscanaTiles" />
-
+    <meta name="keywords" content="Italian tiles, home decor, premium tiles, renovation, craftsmanship, design" />
     <meta property="og:title" content="ToscanaTiles - Premium Italian Tiles" />
     <meta property="og:description" content="Discover premium Italian tiles for your home renovation projects. Authentic materials, expert craftsmanship, and elegant designs." />
     <meta property="og:type" content="website" />
